--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -48,6 +48,11 @@ h1 {
   list-style-type: none;
 }
 
-.sunny {
-  background-image: url('')
+#sunny {
+  background-image: url('./images/sunny.jpg');
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  height: 100%;
+  z-index: 9;
 }
